--- a/app/src/main/res/layout/login_screen.xml
+++ b/app/src/main/res/layout/login_screen.xml
@@ -21,7 +21,7 @@
             android:id="@+id/text_Name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Name"
+            android:text="Email"
             android:textAlignment="center"
             android:textSize="18sp" />
 
@@ -30,7 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPersonName" />
+            android:inputType="textEmailAddress" />
 
         <TextView
             android:id="@+id/text_Password"
@@ -49,7 +49,6 @@
 
         <Button
             android:id="@+id/log_login_but"
-
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:text="Login"
